causal interpretability survey update

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
           <section id="news">
             <h1>News</h1>
-            <!-- <div class="row">
+            <div class="row">
                 <div class="col-md-3">August 2024</div>
-                <div class="col-md-9">Our <a href="https://arxiv.org/abs/2408.xxxx">causal interpretability survey</a> is out on arXiv. As interpretability researchers, we're still trying to understand the right level of abstraction for thinking about computation.</div>
-            </div> -->
+                <div class="col-md-9">Our <a href="https://arxiv.org/abs/2408.01416">causal interpretability survey</a> is out on arXiv. As interpretability researchers, we're still trying to understand the right level of abstraction for thinking about neural network computation, but causal methods have become a promising method for studying them.</div>
+            </div>
 
             <div class="row">
                 <div class="col-md-3">July 2024</div>
