--- a/publications.html
+++ b/publications.html
@@ -123,23 +123,49 @@
             <section id="preprints">
             <h2>Preprints and In Submission</h2>
 
-            <div class="citation">
-                Jaden Fiotto-Kaufman, Alexander R Loftus, <b>Eric Todd</b>, Jannik Brinkmann, Caden Juang, Koyena Pal, Can Rager, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Michael Ripa, Adam Belfki, Nikhil Prakash, Sumeet Multani, Carla Brodley, Arjun Guha, Jonathan Bell, Byron Wallace, David Bau. <a href="https://arxiv.org/pdf/2407.14561">NNsight and NDIF: Democratizing Access to Foundation Model Internals</a>. 2024.
-                <div class="publication-content">
-                    <div class="button-container">
-                        <button class="abstract-toggle">Abstract</button>
-                        <a href="https://nnsight.net"><button>Project Website</button></a>
-                        <a href="https://arxiv.org/abs/2407.14561"><button>arXiv</button></a>
-                        <div class="abstract-container">
-                            <p> The enormous scale of state-of-the-art foundation models has limited their accessibility to scientists, 
-                                because customized experiments on large models require costly hardware and complex engineering that is impractical for most researchers. 
-                                To alleviate these problems, we introduce NNsight, an open-source Python package with a simple, flexible API 
-                                that can express interventions on any PyTorch model by building computation graphs. 
-                                We also introduce NDIF, a collaborative research platform providing researchers access to foundation-scale LLMs via the NNsight API. 
-                                Code, documentation, and tutorials are available at <a href="https://nnsight.net/">https://nnsight.net/</a>.</p>
+                <div class="citation">
+                    Jaden Fiotto-Kaufman, Alexander R Loftus, <b>Eric Todd</b>, Jannik Brinkmann, Caden Juang, Koyena Pal, Can Rager, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Michael Ripa, Adam Belfki, Nikhil Prakash, Sumeet Multani, Carla Brodley, Arjun Guha, Jonathan Bell, Byron Wallace, David Bau. <a href="https://arxiv.org/pdf/2407.14561">NNsight and NDIF: Democratizing Access to Foundation Model Internals.</a> 2024.
+                    <div class="publication-content">
+                        <div class="button-container">
+                            <button class="abstract-toggle">Abstract</button>
+                            <a href="https://nnsight.net"><button>Project Website</button></a>
+                            <a href="https://arxiv.org/abs/2407.14561"><button>arXiv</button></a>
+                            <div class="abstract-container">
+                                <p> The enormous scale of state-of-the-art foundation models has limited their accessibility to scientists, 
+                                    because customized experiments on large models require costly hardware and complex engineering that is impractical for most researchers. 
+                                    To alleviate these problems, we introduce NNsight, an open-source Python package with a simple, flexible API 
+                                    that can express interventions on any PyTorch model by building computation graphs. 
+                                    We also introduce NDIF, a collaborative research platform providing researchers access to foundation-scale LLMs via the NNsight API. 
+                                    Code, documentation, and tutorials are available at <a href="https://nnsight.net/">https://nnsight.net/</a>.</p>
+                                </div>
                             </div>
-                        </div>
-                    </div> 
+                        </div> 
+                </div>
+
+                <div class="citation">
+                    Aaron Mueller, Jannik Brinkmann, Millicent Li, Samuel Marks, Koyena Pal, Nikhil Prakash, Can Rager, Aruna Sankaranarayanan, Arnab Sen Sharma, Jiuding Sun, <b>Eric Todd</b>, David Bau, Yonatan Belinkov. <a href="https://arxiv.org/abs/2408.01416">The Quest for the Right Mediator: A History, Survey, and Theoretical Grounding of Causal Interpretability.</a> 2024.
+                    <div class="publication-content">
+                        <div class="button-container">
+                            <button class="abstract-toggle">Abstract</button>
+                            <!-- <a href="https://nnsight.net"><button>Project Website</button></a> -->
+                            <a href="https://arxiv.org/abs/2408.01416"><button>arXiv</button></a>
+                            <div class="abstract-container">
+                                <p> Interpretability provides a toolset for understanding how and why neural networks behave in certain ways. 
+                                    However, there is little unity in the field: most studies employ ad-hoc evaluations and do not share theoretical foundations, 
+                                    making it difficult to measure progress and compare the pros and cons of different techniques. 
+                                    Furthermore, while mechanistic understanding is frequently discussed, the basic causal units underlying these mechanisms 
+                                    are often not explicitly defined. In this paper, we propose a perspective on interpretability research grounded in causal mediation analysis.
+                                    Specifically, we describe the history and current state of interpretability taxonomized according to the types of 
+                                    causal units (mediators) employed, as well as methods used to search over mediators. We discuss the pros and cons of each mediator, 
+                                    providing insights as to when particular kinds of mediators and search methods are most appropriate depending on the goals of a given study. 
+                                    We argue that this framing yields a more cohesive narrative of the field, as well as actionable insights for future work. 
+                                    Specifically, we recommend a focus on discovering new mediators with better trade-offs between human-interpretability and compute-efficiency,
+                                    and which can uncover more sophisticated abstractions from neural networks than the primarily linear mediators employed in current work.
+                                    We also argue for more standardized evaluations that enable principled comparisons across mediator types, such that we can better understand
+                                    when particular causal units are better suited to particular use cases</p>
+                                </div>
+                            </div>
+                        </div> 
                 </div>
             </section>
 
