--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1>About Me</h1>
             <p>Hi, my name is Eric Todd. I'm a rising third-year PhD student at Northeastern University advised by <a href="https://baulab.info/">Professor David Bau</a>. Prior to beginning my PhD, I studied <a href="https://acme.byu.edu">Applied and Computational Mathematics</a> at Brigham Young University (BYU).</p>
             <p>I'm interested in understanding the learned structure of large neural networks, and how their internal representations enable their impressive generalization capabilities.</p>
-            <p>My research interests generally include machine learning and interpretability. I'm particularly excited by generative models and their applications in natural language processing (NLP) and computer vision.</p>
+            <p>My research interests generally include machine learning and interpretability. I'm particularly excited by generative models and their applications in natural language and computer vision.</p>
           </section>
 
           <hr>
@@ -139,7 +139,7 @@
 
           <hr>
           <footer>
-              <p class="copyright">&copy; 2024 Eric Todd. All rights reserved. Last updated on August 2, 2024.</p>
+              <p class="copyright">&copy; 2024 Eric Todd. All rights reserved. Last updated on October 15, 2024.</p>
           </footer>
         </div>
 
