--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
                             <a href="https://functions.baulab.info"><button>Project Website</button></a>
-                            <a href="https://arxiv.org/abs/2310.15213"><button>arXiv</button></a>
+                            <a href="https://arxiv.org/abs/2310.15213"><button>PDF</button></a>
                             <a href="https://openreview.net/forum?id=AwyxtyMwaG"><button>OpenReview</button></a>
                             <div class="abstract-container">
                                 <p>We report the presence of a simple neural mechanism that represents an input-output function as a vector 
@@ -74,7 +74,8 @@
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
-                            <a href="https://pubs.aip.org/asa/poma/article/39/1/040003/838127/Automatic-detection-of-instances-of-focused-crowd"><button>POMA</button></a>
+                            <a href="files/automatic-detection-of-focused-crowd-involvement.pdf"><button>PDF</button></a>
+                            <!-- <a href="https://pubs.aip.org/asa/poma/article/39/1/040003/838127/Automatic-detection-of-instances-of-focused-crowd"><button>POMA</button></a> -->
                             <div class="abstract-container">
                                 <p>This paper describes the development of an automated classification algorithm for detecting instances of focused
                                     crowd involvement present in crowd cheering. The purpose of this classification system is for situations where crowds
@@ -97,8 +98,9 @@
                     <a href="https://pubs.aip.org/asa/poma/article/35/1/055006/997305/Classifying-crowd-behavior-at-collegiate">Classifying crowd behavior at collegiate basketball games using acoustic data.</a> <em>Proceedings of Meetings on Acoustics</em> <b>35</b>, 055006. (2018)
                     <div class="publication-content">
                         <div class="button-container">
-                            <button class="abstract-toggle">Abstract</button>                            
-                            <a href="https://pubs.aip.org/asa/poma/article/35/1/055006/997305/Classifying-crowd-behavior-at-collegiate"><button>POMA</button></a>
+                            <button class="abstract-toggle">Abstract</button>
+                            <a href="files/classifying-crowd-behavior-basketball.pdf"><button>PDF</button></a>                            
+                            <!-- <a href="https://pubs.aip.org/asa/poma/article/35/1/055006/997305/Classifying-crowd-behavior-at-collegiate"><button>Link</button></a> -->
                             <div class="abstract-container">
                                 <p>The relationship between crowd noise and crowd behavioral dynamics is a relatively unexplored field of
                                     research. Signal processing and machine learning (ML) may be useful in classifying and predicting crowd
@@ -128,8 +130,9 @@
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
-                            <a href="https://nnsight.net"><button>Project Website</button></a>
-                            <a href="https://arxiv.org/abs/2407.14561"><button>arXiv</button></a>
+                            <a href="https://nnsight.net"><button>NNsight Website</button></a>
+                            <a href="https://ndif.us"><button>NDIF Website</button></a>
+                            <a href="https://arxiv.org/abs/2407.14561"><button>PDF</button></a>
                             <div class="abstract-container">
                                 <p> The enormous scale of state-of-the-art foundation models has limited their accessibility to scientists, 
                                     because customized experiments on large models require costly hardware and complex engineering that is impractical for most researchers. 
@@ -147,8 +150,8 @@
                     <div class="publication-content">
                         <div class="button-container">
                             <button class="abstract-toggle">Abstract</button>
-                            <!-- <a href="https://nnsight.net"><button>Project Website</button></a> -->
-                            <a href="https://arxiv.org/abs/2408.01416"><button>arXiv</button></a>
+                            <!-- <a href=""><button>Project Website</button></a> -->
+                            <a href="https://arxiv.org/abs/2408.01416"><button>PDF</button></a>
                             <div class="abstract-container">
                                 <p> Interpretability provides a toolset for understanding how and why neural networks behave in certain ways. 
                                     However, there is little unity in the field: most studies employ ad-hoc evaluations and do not share theoretical foundations, 
@@ -171,7 +174,7 @@
 
             <hr>
             <footer>
-                <p class="copyright">&copy; 2024 Eric Todd. All rights reserved. Last updated on August 2, 2024.</p>
+                <p class="copyright">&copy; 2024 Eric Todd. All rights reserved. Last updated on October 15, 2024.</p>
             </footer>
         
         </div>
