--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="main-content">
           <section id="bio">
             <h1>About Me</h1>
-            <p>Hi, my name is Eric Todd. I'm a rising third-year PhD student at Northeastern University advised by <a href="https://baulab.info/">Professor David Bau</a>. Prior to beginning my PhD, I studied <a href="https://acme.byu.edu">Applied and Computational Mathematics</a> at Brigham Young University (BYU).</p>
+            <p>Hi, my name is Eric Todd. I'm a third-year PhD student at Northeastern University advised by <a href="https://baulab.info/">Professor David Bau</a>. Prior to beginning my PhD, I studied <a href="https://acme.byu.edu">Applied and Computational Mathematics</a> at Brigham Young University (BYU).</p>
             <p>I'm interested in understanding the learned structure of large neural networks, and how their internal representations enable their impressive generalization capabilities.</p>
             <p>My research interests generally include machine learning and interpretability. I'm particularly excited by generative models and their applications in natural language and computer vision.</p>
           </section>
