update w/ ICLR 2025 news

--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
 
           <section id="news">
             <h1>News</h1>
+
+            <div class="row">
+                <div class="col-md-3">January 2025</div>
+                <div class="col-md-9">Our <a href="https://openreview.net/forum?id=MxbEiFRf39">NNsight and NDIF</a> paper was accepted to ICLR 2025!</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-3">November 2024</div>
+                <div class="col-md-9">Reviewed for the <a href="https://interpretable-ai-workshop.github.io/">Interpretable AI: Past, Present, and Future NeurIPS Workshop</a> and the <a href="https://iclr.cc/Conferences/2025">ICLR 2025 Main Conference</a>.</div>
+            </div>
+
             <div class="row">
                 <div class="col-md-3">August 2024</div>
                 <div class="col-md-9">Our <a href="https://arxiv.org/abs/2408.01416">causal interpretability survey</a> is out on arXiv. As interpretability researchers, we're still trying to understand the right level of abstraction for thinking about neural network computation, but causal methods have become a promising method for studying them.</div>
@@ -63,22 +74,22 @@
 
             <div class="row">
                 <div class="col-md-3">June 2024</div>
-                <div class="col-md-9">Reviewed for <a href="https://neurips.cc/Conferences/2024">Neurips Main Conference</a> and <a href="https://iclworkshop.github.io/">1st ICML Workshop on In-Context Learning.</a></div>
+                <div class="col-md-9">Reviewed for <a href="https://neurips.cc/Conferences/2024">NeurIPS Main Conference</a> and <a href="https://iclworkshop.github.io/">1st ICML Workshop on In-Context Learning</a>.</div>
             </div>
 
             <div class="row">
                 <div class="col-md-3">May 2024</div>
-                <div class="col-md-9">Invited Talk on Function Vectors at the Princeton Neuroscience Institute.</div>
+                <div class="col-md-9">Invited talk on Function Vectors at the Princeton Neuroscience Institute.</div>
             </div>
 
             <div class="row">
                 <div class="col-md-3">May 2024</div>
-                <div class="col-md-9">Had a great time presenting our Function Vectors work at <a href="https://iclr.cc/Conferences/2024">ICLR 2024.</a></div>
+                <div class="col-md-9">Had a great time presenting our Function Vectors work at <a href="https://iclr.cc/Conferences/2024">ICLR 2024</a>.</div>
             </div>
 
             <div class="row">
                 <div class="col-md-3">January 2024</div>
-                <div class="col-md-9">Our <a href="https://functions.baulab.info/">Function Vectors</a> paper was accepted to ICLR!</div>
+                <div class="col-md-9">Our <a href="https://functions.baulab.info/">Function Vectors</a> paper was accepted to ICLR 2024!</div>
             </div>
 
             <!-- <div class="row">
@@ -96,12 +107,15 @@
             
             <div class="citation">
                 <img src="images/papers/nnsight.png" alt="nnsight-paper">
+                <!-- <img src="images/papers/ndif_design.png" alt="nnsight-paper"> -->
+                 <!-- <img src="images/papers/ndif-logo.png" alt="nnsight-paper"> -->
                 <a href="https://arxiv.org/pdf/2407.14561">NNsight and NDIF: Democratizing Access to Foundation Model Internals.</a>
-                Jaden Fiotto-Kaufman, Alexander R. Loftus, <b>Eric Todd</b>, Jannik Brinkmann, Caden Juang, Koyena Pal, Can Rager, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Michael Ripa, Adam Belfki, Nikhil Prakash, Sumeet Multani, Carla Brodley, Arjun Guha, Jonathan Bell, Byron C. Wallace, David Bau. 2024.
+                Jaden Fiotto-Kaufman, Alexander R. Loftus, <b>Eric Todd</b>, Jannik Brinkmann, Koyena Pal, Dmitrii Troitskii, Michael Ripa, Adam Belfki, Can Rager, Caden Juang, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Nikhil Prakash, Carla Brodley, Arjun Guha, Jonathan Bell, Byron C. Wallace, David Bau. <em>Proceedings of the 2025 International Conference on Learning Representations.</em> (ICLR 2025)
                     <div class="button-container">
                         <button class="abstract-toggle">Abstract</button>
-                        <a href="https://nnsight.net"><button>Project Website</button></a>
+                        <a href="https://ndif.us"><button>Project Website</button></a>
                         <a href="https://arxiv.org/abs/2407.14561"><button>arXiv</button></a>
+                        <a href="https://openreview.net/forum?id=MxbEiFRf39"><button>OpenReview</button></a>
                         <div class="abstract-container">
                             <p> The enormous scale of state-of-the-art foundation models has limited their accessibility to scientists, 
                                 because customized experiments on large models require costly hardware and complex engineering that is impractical for most researchers. 
@@ -139,7 +153,7 @@
 
           <hr>
           <footer>
-              <p class="copyright">&copy; 2024 Eric Todd. All rights reserved. Last updated on October 15, 2024.</p>
+              <p class="copyright">&copy; 2025 Eric Todd. All rights reserved. Last updated on January 28, 2025.</p>
           </footer>
         </div>
 
