--- a/publications.html
+++ b/publications.html
@@ -41,9 +41,29 @@
         <div class="main-content">
             <section id="conference-publications">
                 <h2>Conference Publications</h2>
+
+                <div class="citation">
+                    Jaden Fiotto-Kaufman, Alexander R. Loftus, <b>Eric Todd</b>, Jannik Brinkmann, Koyena Pal, Dmitrii Troitskii, Michael Ripa, Adam Belfki, Can Rager, Caden Juang, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Nikhil Prakash, Carla Brodley, Arjun Guha, Jonathan Bell, Byron C. Wallace, David Bau. <a href="https://arxiv.org/pdf/2407.14561">NNsight and NDIF: Democratizing Access to Open-Weight Foundation Model Internals.</a> <em>Proceedings of the 2025 International Conference on Learning Representations.</em> (ICLR 2025)
+                    <div class="publication-content">
+                        <div class="button-container">
+                            <button class="abstract-toggle">Abstract</button>
+                            <a href="https://nnsight.net"><button>NNsight Website</button></a>
+                            <a href="https://ndif.us"><button>NDIF Website</button></a>
+                            <a href="https://arxiv.org/abs/2407.14561"><button>PDF</button></a>
+                            <a href="https://openreview.net/forum?id=MxbEiFRf39"><button>OpenReview</button></a>
+                            <div class="abstract-container">
+                                <p> The enormous scale of state-of-the-art foundation models has limited their accessibility to scientists, 
+                                    because customized experiments on large models require costly hardware and complex engineering that is impractical for most researchers. 
+                                    To alleviate these problems, we introduce NNsight, an open-source Python package with a simple, flexible API 
+                                    that can express interventions on any PyTorch model by building computation graphs. 
+                                    We also introduce NDIF, a collaborative research platform providing researchers access to foundation-scale LLMs via the NNsight API. 
+                                    Code, documentation, and tutorials are available at <a href="https://nnsight.net/">https://nnsight.net/</a>.</p>
+                                </div>
+                            </div>
+                        </div> 
+                </div>
                     
                 <div class="citation">
-                    <!-- <img src="images/fv-2.png" alt="fv-paper"> -->
                     <b>Eric Todd</b>, Millicent L. Li, Arnab Sen Sharma, Aaron Mueller, Byron C. Wallace, David Bau. <a href="https://arxiv.org/pdf/2310.15213">Function Vectors in Large Language Models.</a> <em>Proceedings of the 2024 International Conference on Learning Representations.</em> (ICLR 2024)
                     <div class="publication-content">
                         <div class="button-container">
@@ -126,26 +146,6 @@
             <h2>Preprints and In Submission</h2>
 
                 <div class="citation">
-                    Jaden Fiotto-Kaufman, Alexander R Loftus, <b>Eric Todd</b>, Jannik Brinkmann, Caden Juang, Koyena Pal, Can Rager, Aaron Mueller, Samuel Marks, Arnab Sen Sharma, Francesca Lucchetti, Michael Ripa, Adam Belfki, Nikhil Prakash, Sumeet Multani, Carla Brodley, Arjun Guha, Jonathan Bell, Byron Wallace, David Bau. <a href="https://arxiv.org/pdf/2407.14561">NNsight and NDIF: Democratizing Access to Foundation Model Internals.</a> 2024.
-                    <div class="publication-content">
-                        <div class="button-container">
-                            <button class="abstract-toggle">Abstract</button>
-                            <a href="https://nnsight.net"><button>NNsight Website</button></a>
-                            <a href="https://ndif.us"><button>NDIF Website</button></a>
-                            <a href="https://arxiv.org/abs/2407.14561"><button>PDF</button></a>
-                            <div class="abstract-container">
-                                <p> The enormous scale of state-of-the-art foundation models has limited their accessibility to scientists, 
-                                    because customized experiments on large models require costly hardware and complex engineering that is impractical for most researchers. 
-                                    To alleviate these problems, we introduce NNsight, an open-source Python package with a simple, flexible API 
-                                    that can express interventions on any PyTorch model by building computation graphs. 
-                                    We also introduce NDIF, a collaborative research platform providing researchers access to foundation-scale LLMs via the NNsight API. 
-                                    Code, documentation, and tutorials are available at <a href="https://nnsight.net/">https://nnsight.net/</a>.</p>
-                                </div>
-                            </div>
-                        </div> 
-                </div>
-
-                <div class="citation">
                     Aaron Mueller, Jannik Brinkmann, Millicent Li, Samuel Marks, Koyena Pal, Nikhil Prakash, Can Rager, Aruna Sankaranarayanan, Arnab Sen Sharma, Jiuding Sun, <b>Eric Todd</b>, David Bau, Yonatan Belinkov. <a href="https://arxiv.org/abs/2408.01416">The Quest for the Right Mediator: A History, Survey, and Theoretical Grounding of Causal Interpretability.</a> 2024.
                     <div class="publication-content">
                         <div class="button-container">
@@ -174,7 +174,7 @@
 
             <hr>
             <footer>
-                <p class="copyright">&copy; 2024 Eric Todd. All rights reserved. Last updated on October 15, 2024.</p>
+                <p class="copyright">&copy; 2025 Eric Todd. All rights reserved. Last updated on January 28, 2025.</p>
             </footer>
         
         </div>
