--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     </header>
 
     <div class="container">
-
         <div class="sidebar">
           <img src="images/eric_profile.jpg" alt="Eric Todd" class="profile-pic">
           <div class="social-links">
@@ -35,7 +34,8 @@
             <a href="https://twitter.com/ericwtodd" target="_blank"><i class="fab fa-fw fa-twitter-square"></i><span> Twitter</span></a>
             <a href="https://github.com/ericwtodd" target="_blank"><i class="fab fa-github fa-lg"></i><span> Github</span></a>
             <a href="https://www.linkedin.com/in/eric-w-todd/" target="_blank"><i class="fab fa-fw fa-linkedin"></i><span> LinkedIn</span></a>
-            <a href="https://scholar.google.com/citations?hl=en&user=o12WPZEAAAAJ&view_op=list_works&sortby=pubdate" target="_blank"><i class="ai ai-google-scholar" style="font-size:1.3rem"></i><span> Google Scholar</span></a>
+            <a href="https://scholar.google.com/citations?user=o12WPZEAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar" style="font-size:1.3rem"></i><span> Google Scholar</span></a>
+            <!-- <a href="https://bsky.app/profile/ericwtodd.bsky.social" target="_blank"><i class="fa-brands fa-bluesky" style="font-size:1.3rem"></i><span> Bluesky</span></a> -->
           </div>
         </div>
 
@@ -59,6 +59,12 @@
                         <h3>2025</h3>
                     </div>
                     <div class="year-content">
+                        <div class="news-group">
+                        <h4>April 2025</h4>
+                        <div class="news-item">Had a fun time attending <a href="https://nenlp.github.io/spr2025/">NENLP 2025</a> at Yale.</div>
+                        <div class="news-item">In a <a href="https://dualroute.baulab.info">new preprint</a>, we find we can separate out how LLMs do verbatim copying of tokens vs. copying of word meanings. This was a fun project led by <a href="https://sfeucht.github.io/">Sheridan</a>, that helps clarify how "induction" in LLMs can also happen over abstract contextual information rather than just literal token values.</div>
+                        </div>
+
                         <div class="news-group">
                         <h4>March 2025</h4>
                         <div class="news-item">Reviewed for <a href="https://icml.cc/Conferences/2025">ICML 2025 Main Conference</a> and <a href="https://sites.google.com/view/miv-cvpr2025/home">The First Workshop on Mechanistic Interpretability for Vision at CVPR 2025</a></div>
@@ -191,7 +197,7 @@
 
           <hr>
           <footer>
-              <p class="copyright">&copy; 2025 Eric Todd. All rights reserved. Last updated on March 19, 2025.</p>
+              <p class="copyright">&copy; 2025 Eric Todd. All rights reserved. Last updated on April 18, 2025.</p>
           </footer>
         </div>
 
