--- a/publications.html
+++ b/publications.html
@@ -160,6 +160,26 @@
             <section id="preprints">
             <h2>Preprints and In Submission</h2>
 
+            <div class="citation">
+                Sheridan Feucht, <b>Eric Todd</b>, Byron C. Wallace, David Bau.
+                <a href="https://arxiv.org/abs/2504.03022">The Dual Route Model of Induction.</a> 2025.
+                <div class="publication-content">
+                    <div class="button-container">
+                        <button class="abstract-toggle">Abstract</button> 
+                        <a href="https://dualroute.baulab.info"><button>Project Website</button></a>
+                        <a href="https://arxiv.org/pdf/2504.03022"><button>PDF</button></a>
+                        <div class="abstract-container">
+                            <p>Prior work on in-context copying has shown the existence of induction heads, which attend to and promote individual tokens during copying. 
+                                In this work we introduce a new type of induction head: concept-level induction heads, which copy entire lexical units instead of individual tokens. 
+                                Concept induction heads learn to attend to the ends of multi-token words throughout training, working in parallel with token-level induction heads 
+                                to copy meaningful text. We show that these heads are responsible for semantic tasks like word-level translation, whereas token inductin heads are vital for tasks that can only be done verbatim, like copying nonsense tokens. 
+                                These two "routes" operate independently: we show that ablation of token induction heads causes models to paraphrase where they would otherwise copy verbatim. 
+                                In light of these findings, we argue that although token induction heads are vital for specific tasks, concept induction heads may be more broadly relevant for in-context learning.</p>
+                            </div>
+                        </div>
+                    </div> 
+            </div>
+
                 <div class="citation">
                     Lee Sharkey, Bilal Chughtai, Joshua Batson, Jack Lindsey, Jeff Wu, Lucius Bushnaq, Nicholas Goldowsky-Dill, Stefan Heimersheim, 
                     Alejandro Ortega, Joseph Bloom, Stella Biderman, Adria Garriga-Alonso, Arthur Conmy, Neel Nanda, Jessica Rumbelow, Martin Wattenberg, 
@@ -228,7 +248,7 @@
 
             <hr>
             <footer>
-                <p class="copyright">&copy; 2025 Eric Todd. All rights reserved. Last updated on March 19, 2025.</p>
+                <p class="copyright">&copy; 2025 Eric Todd. All rights reserved. Last updated on April 18, 2025.</p>
             </footer>
         
         </div>
